--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/appsettings.json
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Contacts;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=.;Database=Contacts;Trusted_Connection=True;MultipleActiveResultSets=true"
     
   },
   "Logging": {
