HouseRenting: Altered the infrastructure. Created initial database with the default ASP.NET entities only.

--- a/WebProject - House Renting System/HouseRentingSystem/appsettings.json
+++ b/WebProject - House Renting System/HouseRentingSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HouseRentingSystem-44140D05-D1F7-4783-8210-1E3C2C8CC027;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=HouseDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
