HouseRenting: Scaffolded Identity and modified Register logic and View

--- a/WebProject - House Renting System/HouseRentingSystem/appsettings.json
+++ b/WebProject - House Renting System/HouseRentingSystem/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=HouseDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=HouseDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HouseRentingSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
